samples/_failures_safe/1761648461_0cc991_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd07618e.c: In function ‘print_token’:
./samples/SAFE/__tmp_bd07618e.c:174:5: error: expected declaration or statement at end of input
  174 |     };
      |     ^
